# bbb-pru-playground

./: .gitignore  CMakeLists.txt  README.md  intrinsic.h  main.cpp  prudefs.h  pruegpiocxx.h  prugpio.h  prugpiocxx.h  resource_table_0.h  resource_table_empty.h  rpmsg.cpp  rpmsg.h
lib/include/: config.h  egpio.h  gpio.h  iep.h  intc.h  intrinsic.h  prudefs.h  pruegpiocxx.h  prugpiocxx.h  regs.h
lib/include/rp/: rpmsg.h
lib/src/: config.cpp  iep.cpp  intc.cpp  regs.cpp
lib/src/rp/: rpmsg.cpp
toolchain/: custom-compiler-clpru.yaml
